[package]
name = "mtag"
version = "0.1.0"
authors = ["Daniel Wolbach <octowaddle@protonmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
id3 = "0.6.2"
id3-image = "0.1.5"
log = "0.4.14"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
